--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>NodeLab Solutions</title>
   <meta name="description" content="Optimización de procesos y automatización empresarial. Sistemas claros para reducir carga operativa y errores.">
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
@@ -156,7 +157,7 @@
 
       <!-- Flujo 3 -->
       <article class="card">
-        <img src="presupuestos.png"
+        <img src="presupuesto.png"
              alt="Gestión y seguimiento de presupuestos"
              style="width:100%; border-radius:12px; margin-bottom:12px;">
 
